[cfg_proto]
cfg_proto=path
cfg_proto_chunk=path

[exp]
cmd=str
run_nn_script=str
out_folder=str
seed=int(-inf,inf)
use_cuda=bool
multi_gpu=bool
save_gpumem=bool
N_epochs_tr=int(1,inf)

[dataset]
data_name=str
fea=str
lab=str
N_chunks=int(1,inf)

[data_use]
train_with=list_str
valid_with=list_str
forward_with=list_str


[batches]
batch_size_train=list_str
max_seq_length_train=list_str
increase_seq_length_train=Bool
start_seq_len_train=list_str
multply_factor_seq_len_train=int(0,inf)
batch_size_valid=int(1,inf)
max_seq_length_valid=list_str

[architecture]
arch_name=str
arch_proto=path
arch_library=str
arch_class=str
arch_pretrain_file=str
arch_freeze=bool
arch_seq_model=bool
arch_lr=list_str
arch_halving_factor=float(0,inf)
arch_improvement_threshold=float(0,inf)
arch_opt={sgd,rmsprop,adam,none}


[model]
model_proto=path
model=str

[forward]
forward_out=str
normalize_posteriors=bool_list
normalize_with_counts_from=str
save_out_file=bool_list
require_decoding=bool_list

[decoding]
decoding_script_folder=path
decoding_script=str
decoding_proto=path




